# anekvideo

./: .gitignore  LICENSE  Makefile.am  autogen.sh  configure.ac
ccan/check_type/: .depends
ccan/container_of/: .depends
ccan/list/: .depends
src/: anekvideo.c  atomic.h  buffer.c  buffer.h  defines.h  device.c  device.h  frame.c  frame.h  log.h  random.c  random.h  server.c  server.h  shm.c  shm.h  util.c  util.h
tests/: buffer.c  client.c  device.c  device.test  log.c  log.test  shm.c  shm.test  simple-daemon.c  test.c
